[package]
name = "hazojsondiff"
version = "0.1.0"
edition = "2024"

[dependencies]
lol_alloc = "0.4.1"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hazojsondiff"
path = "src/lib.rs"

[[bin]]
name = "hazojsondiff"
path = "src/main.rs"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O1', '--enable-bulk-memory']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-bulk-memory']

[profile.release]
opt-level = 's'
lto = true
strip = true
